Fix spacing

--- a/resources/assets/sass/admin.scss
+++ b/resources/assets/sass/admin.scss
@@ -266,6 +266,11 @@ legend {
   margin-bottom: 20px;
 }
 
+.spacing {
+  padding-left: 0;
+  padding-bottom: 15px;
+}
+
 code {
   background-color: #f9f2f4;
   border-radius: 4px;
